<resources>
    <string name="app_name">My Book World</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_in">SignIn</string>
    <!--Intro Screen-->
    <string name="let_s_get_started_text">Let Us Get Started</string>
    <string name="intro_text_description">New to the Book World?</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to sign up.</string>
    <!--Sign Up-->
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <!--START Sign IN-->
    <string name="sign_in_description_text">Enter your name, email id and password, to login.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="SignIn">signIn</string>
    <string name="image_contentDescription">Image Content Desc</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_Log_out">Log Out</string>
    <!--End-->

    <!--Dialog box-->
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="writeIcon">Write</string>
    <string name="exploreIcon">Explore</string>
    <string name="homeIcon">Home</string>
    <string name="genre">Genre</string>
    <string name="writer_section">Writer\'s Section</string>

    <string name="favourites">favourite</string>
    <string name="Firebase">fire</string>
    <!--dialog box-->

    <!--START PROFILE-->
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE PROFILE</string>
    <string name="my_profile_title">My Profile</string>
    <string name="nav_my_works">My Works</string>

    <!--END PROFILE-->

    <!--MY BOOKS-->

    <string name="Happy_Writing">Happy Writing</string>
    <string name="book_name">Book Title</string>
    <string name="book_category">Book Category</string>
    <string name="choose_book">Upload Book</string>
    <string name="my_book_description_text">Enter Book Details</string>
    <string name="upload">Upload Book PDF</string>
    <string name="book_description">Book Description</string>
    <string name="book_pages">Number Of Pages</string>
    <string name="upload_cover">Upload Book Cover</string>


    <string name="submit">Submit Book</string>
    <string name="err_msg_select_book_cover">Kindly Select an Image For Book Cover</string>
    <string name="err_msg_enter_book_name">Please Enter Book Name</string>
    <string name="err_msg_enter_book_pages">Enter Number Of Pages in Book</string>
    <string name="err_msg_enter_book_desc">Enter Short Description Of Book</string>
    <string name="err_msg_enter_book_category">Enter Category Of Book</string>
    <string name="err_msg_enter_email">Enter email</string>
    <string name="err_msg_enter_name">Enter Author\'s Name</string>
    <string name="user_book_upload_success">User Book Is Uploaded Successfully</string>


    <string name="nav_my_favourite">My Favourite</string>
    <string name="author">Author</string>
    <string name="romance">Romance</string>
    <string name="horror">Horror</string>
    <string name="health">Health and Fitness</string>
    <string name="fiction">Fiction</string>
    <string name="fantasy">Fantasy</string>
    <string name="biography">Biography</string>
    <string name="historical_fiction">Historical Fiction</string>
    <string name="action_adventure">Action and Adventure</string>
    <string name="success_message_item_added_to_favourites">Added To Favourites</string>
    <string name="err_msg_select_book">Book Selected</string>
    <string name="err_msg_select_category">Category Not Selected</string>
    <string name="remove_from_book_success">Removed From Favourites</string>
    <string name="no_favourite_item_found">No Favourite Book Found</string>
    <string name="Go_to_My_Works">My Work</string>
    <string name="Go_To_writer_section">Write Now</string>
    <string name="help_text">In case of any suggestions, feedback, queries, feel free to reach out to us! Email us at teammybookworld@gmail.com</string>
    <string name="about_app">This app is a place that has been created for readers and writers to share their writings with others. One can simply upload their writings in pdf format and can also read books by other authors, in the different genre categories. <br/>
        <br/> Keep reading, writing and publishing content!</string>
    <string name="autobiography">Autobiography</string>
    <string name="health_and_fitness">Health and Fitness</string>
    <string name="health_fitness_tagline">Eat healthy. Stay fit.</string>
    <string name="self_improvement">Self-Improvement</string>
    <string name="Self_improv_tagline">Change begins from you</string>
    <string name="update_profile_picture">Update Profile Picture</string>

</resources>