<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_user"
            android:title="@string/nav_my_profile"
            />
        <item
            android:id="@+id/nav_my_works"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"
            />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_nav_favourites"
            android:title="@string/nav_favourites"
            />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_nav_help"
            android:title="@string/nav_help"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_about"
            />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_nav_log_out"
            android:title="@string/nav_Log_out"
            />
    </group>
</menu>