<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_genre"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GenreFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#b4d1f4"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- 1st Linear Layout for the two cards horror and romance -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">
                <!-- horror card -->
                <!-- romance card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/horror"
                    android:layout_width="190dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="159dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="68dp"
                            android:layout_height="68dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/circlebackgroundpurple"
                            android:padding="10dp"
                            android:src="@drawable/book_icon"></ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/horror"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="Chills + Shivers"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/romance"
                    android:layout_width="190dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="68dp"
                            android:layout_height="68dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/circlebackgroundpeach"
                            android:padding="10dp"
                            android:src="@drawable/book_icon"></ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/romance"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="A Sweet Getaway"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
            <!-- 2nd Linear Layout for the two cards fiction and historical fiction -->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">
                <!-- fiction card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fiction"
                    android:layout_width="190dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="68dp"
                            android:layout_height="68dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/circlebackgroundyellow"
                            android:padding="10dp"
                            android:src="@drawable/book_icon"></ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/fiction"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="   Welcome to Fiction Area"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <!-- historical fiction card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/historical_fiction"
                    android:layout_width="190dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="68dp"
                            android:layout_height="68dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/circlebackgroundteal"
                            android:padding="10dp"
                            android:src="@drawable/book_icon"></ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/historical_fiction"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="Go back into time"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
            <!-- 3rd Linear Layout for the two cards Fantasy and Adventure -->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">
                <!-- fantasy card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fantasy"
                    android:layout_width="190dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="68dp"
                            android:layout_height="68dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/circlebackgroundpeach"
                            android:padding="10dp"
                            android:src="@drawable/book_icon"></ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/fantasy"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="4dp"
                            android:text="Get lost in another world."
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <!-- action and adventure card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/action"
                    android:layout_width="190dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="68dp"
                            android:layout_height="68dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/circlebackgroundpurple"
                            android:padding="10dp"
                            android:src="@drawable/book_icon"></ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:text="@string/action_adventure"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="2dp"
                            android:text="Fun for everyone!"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>



</FrameLayout>

